--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@netlify/plugin-nextjs": "^5.11.2",
     "gsap": "^3.13.0",
     "next": "15.3.2",
     "postcss": "^8.5.3",
