--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "swapy": "^1.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
